syntax = "proto3";

package test_user;

service UserDomain {
  rpc getUsers(UsersRequest) returns (UsersReply);
}

message User {
  string firstName = 1;
  string lastName = 2;
  string sex = 3;
  string email = 4;
  Location location = 5;

  message Location {
    string state = 1;
    string city = 2;
    string street = 3;
  }
}

message UsersRequest {
  int32 resultCount = 1;
}

message UsersReply {
  repeated User users = 1;
}